markup and style card page

--- a/catalog.html
+++ b/catalog.html
@@ -46,7 +46,7 @@
 	</header>
 
 	<!--	Основное содержание    -->
-	<main>
+	<main class="main">
 	  <div class="catalog-header">
 		<div class="catalog-header-wrapper container">
 		  <div class="catalog-header-text-column">
